test/chainsaw/authpolicy/webhook_invocation/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    ztoperator.kartverket.no/verify-authpolicy: "true"
  labels:
    app: app
    app.kubernetes.io/managed-by: skiperator
    application.skiperator.no/app: app
    application.skiperator.no/app-name: app
    skiperator.kartverket.no/controller: application
spec:
  containers:
    - name: app
  initContainers:
    - name: istio-init
    - name: istio-proxy
