test/chainsaw/authpolicy/webhook_invocation/with-annotation-authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  allowedAudiences:
    - value: entraid_server
  selector:
    matchLabels:
      app: app-with-annotation
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
