test/chainsaw/authpolicy/webhook_invocation/without-annotation-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: app-without-annotation
    app.kubernetes.io/managed-by: skiperator
    application.skiperator.no/app: app-without-annotation
    application.skiperator.no/app-name: app-without-annotation
    skiperator.kartverket.no/controller: application
spec:
  containers:
    - name: app-without-annotation
  initContainers:
    - name: istio-init
    - name: istio-proxy
status:
  containerStatuses:
    - name: app-without-annotation
      ready: true
  initContainerStatuses:
    - name: istio-init
      ready: true
    - name: istio-proxy
      ready: true
