test/chainsaw/authpolicy/webhook_invocation/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: webhook-invocation
spec:
  skip: false
  concurrent: true
  skipDelete: false
  namespaceTemplate:
    metadata:
      labels:
        istio-injection: enabled
        skip.kartverket.no/skip-managed: "true"
  steps:
    - try:
        - create:
            file: skiperator-application.yaml
        - assert:
            file: replicaset.yaml
        - error:
            file: pod.yaml
